--- a/Pages/style.css
+++ b/Pages/style.css
@@ -1,5 +1,6 @@
 body{
 font-size: 24px;
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 background-color: SlateGray;
 color: SeaGreen;
 }
