--- a/Pages/style.css
+++ b/Pages/style.css
@@ -1,6 +1,6 @@
 body{
 font-size: 24px;
-  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+font-family: 'Pacifico', cursive;
 background-color: SlateGray;
 color: SeaGreen;
 }
